<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/formCTL"
    style="@style/Screens"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/formCTL2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintEnd_toStartOf="@+id/ava"
                app:layout_constraintTop_toBottomOf="@+id/genero"
                app:srcCompat="@drawable/disponible" />

            <ImageView
                android:id="@+id/ImgType"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="7dp"
                app:layout_constraintEnd_toStartOf="@+id/genero"
                app:layout_constraintTop_toBottomOf="@+id/dateTIL"
                app:srcCompat="@drawable/caballero__2_" />

            <ImageView
                android:id="@+id/ImgISBN"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintEnd_toStartOf="@+id/isbnTIL"
                app:layout_constraintTop_toBottomOf="@+id/codeTIL"
                app:srcCompat="@drawable/etiqueta_del_codigo_de_barras" />

            <ImageView
                android:id="@+id/ImgCode"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintEnd_toStartOf="@+id/codeTIL"
                app:layout_constraintTop_toBottomOf="@+id/authorTIL"
                app:srcCompat="@drawable/codigo_binario" />

            <ImageView
                android:id="@+id/ImgAuthor"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintEnd_toStartOf="@+id/authorTIL"
                app:layout_constraintTop_toBottomOf="@+id/nameTIL"
                app:srcCompat="@drawable/usuario" />

            <ImageView
                android:id="@+id/ImgName"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintEnd_toStartOf="@+id/nameTIL"
                app:layout_constraintTop_toBottomOf="@+id/buttonGallery"
                app:srcCompat="@drawable/libro" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/isbnTIL"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/codeTIL">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/isbnTE"
                    style="@style/NormalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="ISBN" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/genero"
                style="@style/NormalText.spinner"
                android:layout_width="230dp"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateTIL"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/codeTIL"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authorTIL">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/codeTE"
                    style="@style/NormalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/FormCode" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/authorTIL"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameTIL">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/authorTE"
                    style="@style/NormalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/FormAuthor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateTIL"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/isbnTIL">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateTE"
                    style="@style/NormalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/FormPublication" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTIL"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonGallery">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameTE"
                    style="@style/NormalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/FormName" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/deleteimg"
                android:layout_width="85dp"
                android:layout_height="100dp"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="30dp"
                android:background="#00FFFFFF"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toStartOf="@+id/delete"
                app:layout_constraintTop_toBottomOf="@+id/ava"
                app:srcCompat="@drawable/eliminar__1_" />

            <ImageButton
                android:id="@+id/save"
                android:layout_width="85dp"
                android:layout_height="100dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="21dp"
                android:background="#00FFFFFF"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toEndOf="@+id/delete"
                app:layout_constraintTop_toBottomOf="@+id/ava"
                app:srcCompat="@drawable/guardar"
                tools:ignore="MissingConstraints" />

            <ImageButton
                android:id="@+id/delete"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/borrar"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ava"
                tools:ignore="MissingConstraints" />

            <ImageButton
                android:id="@+id/plus"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="18dp"
                android:background="#00FFFFFF"
                android:scaleType="fitCenter"
                app:layout_constraintStart_toEndOf="@+id/genero"
                app:layout_constraintTop_toBottomOf="@+id/dateTIL"
                app:srcCompat="@drawable/mas"
                tools:ignore="MissingConstraints" />

            <CheckBox
                android:id="@+id/ava"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:buttonTint="#FFFFFF"
                android:text="@string/FormAvailable"
                android:textColor="#101D62"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genero"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/buttonGallery"
                android:layout_width="127dp"
                android:layout_height="126dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/subirfoto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/buttonDate"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="12dp"
                android:background="#00FFFFFF"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toStartOf="@+id/dateTIL"
                app:layout_constraintTop_toBottomOf="@+id/isbnTIL"
                app:srcCompat="@drawable/fecha"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>