<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dracolibros.views.ListBookActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/Order"
        android:orderInCategory="100"
        android:title="@string/Order"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_Help"
        android:orderInCategory="100"
        android:title="@string/Help"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_AppDL"
        android:orderInCategory="100"
        android:title="@string/AppDL"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/Setting"
        app:showAsAction="never" />
</menu>